# Deep-Captcha

./: .gitignore  COMPARISON.md  DeepCaptcha.py  MANIFEST.in  README.md  RESEARCH_ANALYSIS.md  ai_resistance_demo.py  ai_resistance_test.py  benchmark_comparison.py  dataset_analysis.py  debug_ai_resistance.py  generate_advanced_plots.py  generate_dataset.py  main.py  proper_ai_test.py  pyproject.toml  research_experiments.py
.github/workflows/: publish.yml
benchmark_results/: benchmark_results.json  research_report.md
deepcaptcha/: __init__.py  core.py
