[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcaptcha"
version = "1.0.1"
description = "AI-Resistant Python CAPTCHA Library with advanced adversarial protection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Ayush Shukla", email = "shuklaayush0704@gmail.com"}
]
keywords = [
    "captcha",
    "security",
    "ai-resistant",
    "adversarial",
    "image-generation",
    "authentication",
    "bot-protection"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pillow>=9.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
full = [
    "scipy>=1.7.0",  # For advanced frequency domain AI resistance
]
dev = [
    "pytest>=7.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/kingknight07/Deep-Captcha"
Documentation = "https://github.com/kingknight07/Deep-Captcha#readme"
Repository = "https://github.com/kingknight07/Deep-Captcha"
Issues = "https://github.com/kingknight07/Deep-Captcha/issues"

[tool.setuptools]
packages = ["deepcaptcha"]

[tool.setuptools.package-data]
deepcaptcha = ["fonts/*.ttf"]
